# aws-lambda-py-types

./: LICENSE  Makefile  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml
.github/workflows/: main.yml  publish.yml
aws_lambda_types/: alb.py  api_gw.py  event_bridge.py  http.py  sns.py  sqs.py
samples/: alb-response.json  alb-with-multivalue-response.json  alb-with-multivalue.json  alb.json  api-gateway-payload-v1-response.json  api-gateway-payload-v1.json  api-gateway-payload-v2-response.json  api-gateway-payload-v2.json  apigateway-authorizer.json  apigateway-proxy.json  cloudwatch.json  dynamodb.json  kinesis.json  s3.json  sns-to-sqs-raw-message-delivery.json  sns-to-sqs.json  sns.json  sqs.json
tests/: conftest.py  test_aws_lambda_types.py  test_types_with_pydantic.py
