[tool.poetry]
name = "aws-lambda-types"
version = "0.1.0"
description = ""
authors = ["Eduard Iskandarov <eduard.iskandarov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
