[tool.poetry]
name = "aws-lambda-types"
version = "0.1.0"
description = ""
authors = ["Eduard Iskandarov <eduard.iskandarov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
typing-extensions = { version = "^3.7.4", python = "<3.8" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
flake8 = "^3.8.4"
mypy = "^0.790"
black = "^20.8b1"
isort = "^5.7.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
